# glv-for-economics

./: README.md  fixed_point.ipynb  mu_critical.ipynb  paths.ipynb  pyproject.toml  rescaled.ipynb  spectrum.ipynb  volatility.ipynb
docs/superpowers/plans/: 2026-04-14-glv-library.md  2026-05-09-adaptive-find-empirical-mu-c.md
docs/superpowers/specs/: 2026-04-14-glv-library-design.md  2026-05-09-adaptive-find-empirical-mu-c-design.md
glv/: __init__.py  analysis.py  dynamics.py  graph.py  observables.py  style.py  sweep.py  visualization.py
notebooks/: aguirre-lopez.ipynb  al_paper.py  annealed.ipynb  annealed_volatility.ipynb  final_time.ipynb  fixed_point.ipynb  glv_volatility.py  ic_dependence_rings.py  mu_critical.ipynb  power_graph.ipynb  rescaled.ipynb  spectrum.ipynb  volatility.ipynb
tests/: test_dynamics.py  test_find_empirical_mu_c.py  test_graph.py
